make the ArjunaJTS tests work