@@ -43,6 +43,7 @@ if [ -z "$MAVEN_OPTS" ]
 then
 	if [ $JAVA_VERSION="9-ea" ]; then
 		MAVEN_OPTS="$MAVEN_OPTS -Xmx512M"
+		MAVEN_OPTS="$MAVEN_OPTS --add-modules java.corba"
 		MAVEN_OPTS="$MAVEN_OPTS --add-exports-private java.base/java.util=ALL-UNNAMED"
 		MAVEN_OPTS="$MAVEN_OPTS --add-exports-private java.base/java.lang.reflect=ALL-UNNAMED"
 		MAVEN_OPTS="$MAVEN_OPTS --add-exports-private java.base/java.text=ALL-UNNAMED"
