@@ -222,12 +222,6 @@ function build_narayana {
   ./build.sh -P${XPROF}${OBJECT_STORE_PROFILE} $ORBARG "$@" $NARAYANA_ARGS $IPV6_OPTS $CODE_COVERAGE_ARGS clean install
   [ $? = 0 ] || fatal "narayana build failed"
 
-  # jtax tests are skipped by default
-  if [ $JAVA_VERSION = "9-ea" -a $NARAYANA_TESTS = 1 ]; then
-      MAVEN_OPTS="--upgrade-module-path target/upgrademodulepath --add-modules java.corba --add-exports java.corba/com.sun.corba.se.spi.orb=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.spi.ior=ALL-UNNAMED --add-exports java.corba/com.sun.corba.se.impl.ior=ALL-UNNAMED" ./build.sh -P${XPROF}${OBJECT_STORE_PROFILE} $ORBARG $NARAYANA_ARGS $IPV6_OPTS $CODE_COVERAGE_ARGS -f ArjunaJTS/jtax/pom.xml -DskipTests=false test
-    [ $? = 0 ] || fatal "narayana jtax build failed"
-  fi
-
   return 0
 }
 
